[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/Menus/StoryScreen.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/Menus/InfoScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/Menus/MenusManager.gd" type="Script" id=3]
[ext_resource path="res://UI/Menus/WinScreen.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/Menus/LoseScreen.tscn" type="PackedScene" id=5]

[node name="MenusManager" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="StoryScreen" parent="." instance=ExtResource( 1 )]

[node name="InfoScreen" parent="." instance=ExtResource( 2 )]
visible = false

[node name="LoseScreen" parent="." instance=ExtResource( 5 )]
visible = false

[node name="WinScreen" parent="." instance=ExtResource( 4 )]
visible = false

[connection signal="NextPanel" from="StoryScreen" to="." method="_on_StoryScreen_NextPanel"]
[connection signal="ExitPanel" from="InfoScreen" to="." method="_on_InfoScreen_ExitPanel"]
